# aws_pipeline

./: .gitignore  Cargo.toml  Makefile  README.md
dashboard/: dashboard_notebook.ipynb
lambda/api/: handler.py
lambda/fetcher/: Cargo.toml
lambda/fetcher/src/: api.rs  aws.rs  lib.rs  main.rs
terraform/: main.tf  variables.tf
